--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,6 @@
         <title>Website Name</title>
     </head>
     <body>
-        Contets of Website
+        Contents of Website
     </body>
 </html>
