--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,47 @@
         <title>Website Name</title>
     </head>
     <body>
-        Contents of Website
+        <p>Contents of Website</p>
+
+        <p>This is really cool, I'm building a web page!</p>
+
+        <h1>Bold and italic text</h1>
+
+        <!-- 'strong' makes bold, 'em' makes italic-->
+        
+        <p><strong>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit</strong>, sed do eiusmod tempor 
+            iLorem ipsum dolor sit amet, consectetur adipiscing 
+            elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua. Ut enim ad minim veniam, quis 
+            nostrud exercitation ullamco laboris nisi ut aliquip 
+            ex ea commodo consequat. Duis aute irure dolor in 
+            reprehenderit in voluptate velit esse cillum dolore 
+            eu fugiat nulla pariatur.</p>
+
+            <!--this is an HTML comment-->
+            
+            <p><em>Excepteur sint occaecat 
+            cupidatat non proident, sunt in culpa qui officia 
+            deserunt mollit anim id est laborum.ncididunt ut 
+            labore et dolore magna aliqua.</em> Ut enim ad minim 
+            veniam, quis nostrud exercitation ullamco laboris 
+            nisi ut aliquip ex ea commodo consequat. Duis aute 
+            irure dolor in reprehenderit in voluptate velit esse 
+            cillum dolore eu fugiat nulla pariatur. <strong>Excepteur 
+            sint occaecat cupidatat non proident, sunt in culpa 
+            qui officia deserunt mollit anim id est 
+            laborum.</strong></p>
+
+        <h2>Heading 2</h2>
+
+        <h3>Heading 3</h3>
+
+        <h4>Heading 4</h4>
+
+        <h5>Heading 5</h5>
+
+        <h6>Heading 6</h6>
+
     </body>
 </html>
