Update travel bucket list

--- a/My_First_Website/index.html
+++ b/My_First_Website/index.html
@@ -5,6 +5,61 @@
     <title>My First Website</title>
 </head>
 <body>
-    My First Website!
+    <p><strong>My First Website!</strong></p>
+
+    <h1>Travel Bucket list</h1>
+
+    <h2><em>USA</em></h2>
+
+    <P>
+        <ul>Miami</ul>
+        <ul>Massachusetts/ Connecticut/ Rhode Island</ul>
+        <ul>Oahu & The Big Island Hawaii</ul>
+        <ul>Alaska (Cruise from Vancouver)</ul>
+    </P>
+
+    <h2><em>Carribean</em></h2>
+
+    <p>
+        <ul>Belize</ul>
+        <ul>Grenada/ St. Lucia</ul>
+        <ul>Virgin Islands</ul>
+        <ul>Puerto Rico</ul>
+        <ul>Jamaica</ul>
+        <ul>Dominican Republic</ul>
+    </p>
+
+    <h2><em>Central & South America</em></h2>
+
+    <p>
+        <ul>Costa Rica</ul>
+        <ul>Brazil</ul>
+        <ul>Argentina</ul>
+        <ul>Chile</ul>
+        <ul>Peru</ul>
+        <ul>Bolivia</ul>
+    </p>
+
+    <h2><em>Europe</em></h2>
+
+    <p>
+        <ul>Italy</ul>
+        <ul>France</ul>
+        <ul>Spain</ul>
+        <ul>England</ul>
+        <ul>Netherlands</ul>
+        <ul>Switzerland</ul>
+        <ul>Croatia</ul>
+        <ul>Greece</ul>
+    </p>
+
+    <h2><em>Asia</em></h2>
+
+    <p>
+        <ul>Thailand</ul>
+        <ul>Malaysia</ul>
+        <ul>Cambodia</ul>
+        <ul>Bali</ul>
+    </p>
 </body>
 </html>
