Update travel list

--- a/My_First_Website/index.html
+++ b/My_First_Website/index.html
@@ -12,54 +12,64 @@
     <h2><em>USA</em></h2>
 
     <P>
-        <ul>Miami</ul>
-        <ul>Massachusetts/ Connecticut/ Rhode Island</ul>
-        <ul>Oahu & The Big Island Hawaii</ul>
-        <ul>Alaska (Cruise from Vancouver)</ul>
+        <ul>
+            <li>Miami</li>
+            <li>Massachusetts/ Connecticut/ Rhode Island</li>
+            <li>Oahu & The Big Island Hawaii</li>
+            <li>Alaska (Cruise from Vancouver)</li>li>
+        </ul>
     </P>
 
     <h2><em>Carribean</em></h2>
 
     <p>
-        <ul>Belize</ul>
-        <ul>Grenada/ St. Lucia</ul>
-        <ul>Virgin Islands</ul>
-        <ul>Puerto Rico</ul>
-        <ul>Jamaica</ul>
-        <ul>Dominican Republic</ul>
+        <ul>
+            <li>Belize</li>
+            <li>Grenada/ St. Lucia</li>
+            <li>Virgin Islands</li>
+            <li>Puerto Rico</li>
+            <li>Jamaica</li>
+            <li>Dominican Republic</li>
+        </ul>
     </p>
 
     <h2><em>Central & South America</em></h2>
 
     <p>
-        <ul>Costa Rica</ul>
-        <ul>Brazil</ul>
-        <ul>Argentina</ul>
-        <ul>Chile</ul>
-        <ul>Peru</ul>
-        <ul>Bolivia</ul>
+        <ul>
+            <li>Costa Rica</li>
+            <li>Brazil</li>
+            <li>Argentina</li>
+            <li>Chile</li>
+            <li>Peru</li>
+            <li>Bolivia</li>
+        </ul>
     </p>
 
     <h2><em>Europe</em></h2>
 
     <p>
-        <ul>Italy</ul>
-        <ul>France</ul>
-        <ul>Spain</ul>
-        <ul>England</ul>
-        <ul>Netherlands</ul>
-        <ul>Switzerland</ul>
-        <ul>Croatia</ul>
-        <ul>Greece</ul>
+        <ul>
+            <li>Italy</li>
+            <li>France</li>
+            <li>Spain</li>
+            <li>England</li>
+            <li>Netherlands</li>
+            <li>Switzerland</li>
+            <li>Croatia</li>
+            <li>Greece</li>
+        </ul>
     </p>
 
     <h2><em>Asia</em></h2>
 
     <p>
-        <ul>Thailand</ul>
-        <ul>Malaysia</ul>
-        <ul>Cambodia</ul>
-        <ul>Bali</ul>
+        <ul>
+            <li>Thailand</li>
+            <li>Malaysia</li>
+            <li>Cambodia</li>
+            <li>Bali</li>
+        </ul>
     </p>
 </body>
 </html>
