fix travel typo

--- a/My_First_Website/index.html
+++ b/My_First_Website/index.html
@@ -16,7 +16,7 @@
             <li>Miami</li>
             <li>Massachusetts/ Connecticut/ Rhode Island</li>
             <li>Oahu & The Big Island Hawaii</li>
-            <li>Alaska (Cruise from Vancouver)</li>li>
+            <li>Alaska (Cruise from Vancouver)</li>
         </ul>
     </P>
 
